<resources>
    <string name="app_name">InventoryAppStage1</string>
    <string name="editor_activity_name">Add Product</string>
    <string name="action_settings">Settings</string>
    <string name="insert_dummy_data">Insert Dummy Data</string>
    <string name="delete_all_entries">Delete All Entries</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="product_name">Product Name</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="supplier_phone_number">Supplier Phone No.</string>
    <string name="product_details">Product Information</string>
    <string name="product_price">Price</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="product_quantity">Product Quantity</string>
    <string name="category_availability">Availability</string>
    <string name="availability_unknown">Unknown</string>
    <string name="availability_yes">In Stock</string>
    <string name="availability_no">Out of Stock</string>
    <string name="database_name">shop.db</string>
    <string name="saving_product_error">Error with saving product</string>
    <string name="product_row_id">Product saved with row id: </string>
    <string name="dummy_product_name">Salami</string>
    <string name="dummy_supplier_name">Caroli Foods Group</string>
    <string name="dummy_supplier_phone_no">0741021021</string>
    <string name="table_content">The products table contains:\t</string>
    <string name="products">\tproducts.\n\n</string>
</resources>
